# CACR

./: .gitignore  CMakeLists.txt  Makefile  partitions.csv  sdkconfig
components/task_io/: CMakeLists.txt  task_io.c
components/task_io/include/: task_io.h
components/task_storage/: CMakeLists.txt  task_storage.c
components/task_storage/include/: task_storage.h
components/task_system/: CMakeLists.txt  task_system.c
components/task_system/include/: task_system.h
components/task_web_server/: CMakeLists.txt  task_web_server.c
components/task_web_server/include/: task_web_server.h
components/task_wifi/: CMakeLists.txt  task_wifi.c
components/task_wifi/include/: task_wifi.h
main/: CMakeLists.txt  main.c
spiffs_image/: ap.html  canais.html  channel.html  colors.html  header.html  home.html  ledC.html  login.html  loginError.html  navbar.html  redes.html  relogio.html  system.html  thermostat.html  timers.html
